fix spacing issueS

--- a/src/main/resources/public/css/mystyle.css
+++ b/src/main/resources/public/css/mystyle.css
@@ -193,6 +193,7 @@
   padding: 20px 30px;
   margin-bottom: 20px;
   text-align: left;
+  clear: both;
 }
 
 .portfolio-stock h2 {
@@ -205,7 +206,8 @@
 
 .portfolio-stock .left {
   float: left;
-  width: 30%;
+  display: block;
+  width: 45%;
   padding: 30px;
 }
 
@@ -214,7 +216,9 @@
 }
 
 .portfolio-stock .right {
-  width: 65%;
+  float: left;
+  display: block;
+  width: 50%;
   padding: 30px;
   right: 0;
 }
